kubernetes/random-demo-deplyment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: random-demo-deployment
  namespace: sample
spec:
  selector:
    matchLabels:
      app: random-demo
  replicas: 1
  template:
    metadata:
      labels:
        app: random-demo
    spec:
      containers:
        - name: random-demo-conainer
          image: danionescu/docker-flask-mongodb-example-python-default:latest
          command: ["python", "/root/flask-mongodb-example/random_demo.py", "mongodb-service"]
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
