kubernetes/random-demo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: random-demo-service
  namespace: sample
spec:
  selector:
    app: random-demo
  ports:
  - protocol: "TCP"
    port: 800
    targetPort: 5000
  type: LoadBalancer
