kubernetes/web-users.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-users-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-users
  template:
    metadata:
      labels:
        app: web-users
    spec:
      containers:
        - name: web-users-container
          image: raseel/web-standard:latest
          imagePullPolicy: Always
          command: ["python", "/root/flask-mongodb-example/python/users.py", "mongodb-service"]
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: web-users-service
spec:
  selector:
    app: web-users
  ports:
    - protocol: TCP
      port: 81
      targetPort: 5000
  type: LoadBalancer
