kubernetes/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cluster-ingress
  annotations:
    kubernetes.io/ingress.class: ingress-nginx
spec:
  rules:
  - host: web-user.rasdevcluster.local
    http:
      paths:
      - path: /
        backend:
          serviceName: web-users-service
          servicePort: 81
